tests/NormalTests/paczka1/fuzzy1/81678612.err
Error in line 1: MGfg2t S645 20,9
Error in line 6: MGfg2t S
Error in line 7: 45 
Error in line 8: 7,1
Error in line 5: MGfg2t A578 47,1
Error in line 14: a3DZTipJaM S645 30,0
